Fixed overflow of Custom Select Component

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -547,6 +547,9 @@ input:disabled,label.disabled-label{
 .z-index-85{
     z-index: 85;
 }
+.z-index-1{
+    z-index: 1;
+}
 .pointer{
     cursor: pointer;
 }
